<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".macActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="69dp"
        android:layout_height="39dp"
        android:layout_marginTop="56dp"
        android:text="@string/button2"
        android:textColor="#8BC34A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="127dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/mac1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/mac" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="320dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/mac2"
        android:textColor="#1FA5B6"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="sig12"
        android:text="@string/menu2"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>